samples/_failures_safe/1761602255_fb5617_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce0762a2.c: In function ‘main’:
./samples/SAFE/__tmp_ce0762a2.c:176:9: error: expected expression at end of input
  176 |         printf("%d: %s -> '%s'\n", i,
      |         ^~~~~~
./samples/SAFE/__tmp_ce0762a2.c:176:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ce0762a2.c:176:9: error: expected declaration or statement at end of input
